Name: ActorProcess
Version: 0.1.0
Synopsis: Actor concurrency model library
License: BSD3
homepage: http://sites.google.com/site/miborishante/Home/actorprocess
Author: Anton Rudnev
Maintainer: Anton Rudnev <miborishante@gmail.com>
Build-Depends: base >= 4.0.0.0, mtl >= 1.1.0.2, MaybeT >= 0.1.2
Exposed-modules:
    Control.Process
    Control.Process.Process
    Control.Process.Action
    Control.Actor
    Control.Actor.Act.Simple
    Control.Actor.Act.Var
    Control.Monad.After
Other-modules:
    Control.Process.Delay
    Control.Concurrent.Chan.Sync
    Control.Actor.Classes
    Control.Actor.Combinators
Build-Type: Simple
Category: Concurrency
Stability: experimental
Description: Actor concurrency model library
Extensions: TypeFamilies,
            GeneralizedNewtypeDeriving,
            StandaloneDeriving,
            DeriveDataTypeable,
            MultiParamTypeClasses,
            FlexibleInstances,
            UndecidableInstances
Cabal-Version: >= 1.2.3
GHC-Options: -threaded
